# dist-tracing-rs

./: .envrc  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yaml
dist-tracing-backend/: Cargo.toml
dist-tracing-backend/config/: default.yaml
dist-tracing-backend/src/: main.rs
dist-tracing-backend/src/api/: mod.rs  v0.rs
dist-tracing-gateway/: Cargo.toml  build.rs
dist-tracing-gateway/config/: default.yaml
dist-tracing-gateway/src/: api.rs  backend.rs  main.rs
proto/: dist-tracing.proto
