[package]
name = "dist-tracing-backend"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
anyhow.workspace = true
configured.workspace = true
prost.workspace = true
serde.workspace=true
serde_json.workspace=true
tokio.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[build-dependencies]
anyhow = {workspace = true}
tonic-build = {workspace = true}
walkdir = {workspace = true}
