[package]
name = "dist-tracing-gateway"
version = "0.1.0"
description = "Distributed Tracing Gateway"
rust-version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]
actix-web = {workspace= true}
anyhow = {workspace = true}
prost.workspace = true
serde.workspace =true
serde_json.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace=true
configured = {workspace = true}
walkdir = {workspace = true}

[build-dependencies]
anyhow = {workspace = true}
walkdir = {workspace = true}
tonic-build = {workspace = true}
